--- a/src/main/resources/jpa-named-queries.properties
+++ b/src/main/resources/jpa-named-queries.properties
@@ -1,8 +1,11 @@
 Product.reportTopProducts =\
-  SELECT PRODUCT_ID,COUNT(PRODUCT_ID) Frequency \
-  FROM ORDERITEM \
-  GROUP BY PRODUCT_ID \
-  ORDER BY COUNT(PRODUCT_ID) DESC \ 
+  SELECT STOREPRODUCT_ID,COUNT(STOREPRODUCT_ID) Frequency \
+  FROM ORDER_ITEMS \
+  GROUP BY STOREPRODUCT_ID \
+  ORDER BY COUNT(STOREPRODUCT_ID) DESC \
   FETCH NEXT 10 ROWS ONLY
+
+
+
 
 
