Change name for report top 10 products query.

--- a/src/main/resources/jpa-named-queries.properties
+++ b/src/main/resources/jpa-named-queries.properties
@@ -1,4 +1,4 @@
-Product.reportTopProducts =\
+Store.reportTop10StoreProducts =\
   SELECT STOREPRODUCT_ID,COUNT(STOREPRODUCT_ID) Frequency \
   FROM ORDER_ITEMS \
   GROUP BY STOREPRODUCT_ID \
